# AttendenceManagerEmailServer

./: .env.template  .gitignore  Dockerfile  Makefile  docker-compose.yml  entrypoint.sh  logging.conf  pyproject.toml
alembic/: env.py
alembic/versions/: c1f1b1b57ccb_init_database_migration.py  e87bb60865a3_init_database_migration.py
app/: config.py  logger.py  main.py
app/utils/: attendance_manager.py  database.py  db_schemas.py  email_client.py  models.py
