[tool.poetry]
name = "attendencemanager-email-server"
version = "0.1.0"
description = "This sends an email to registered user when they are marked absent in any period by monitoring their student portal."
authors = ["Devasheesh Mishra <devasheeshmishra4@gmail.com>"]
readme = "ReadMe.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pytesseract = "^0.3.13"
beautifulsoup4 = "4.12.3"
httpx = "^0.27.2"
pydantic = "^2.9.1"
psycopg2-binary = "^2.9.9"
pandas = "^2.2.2"
lxml = "^5.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
